# batya

./: README.md  batyamemory.db  pyproject.toml
batya/: __init__.py  debil.py  main.py  test.py
