[tool.poetry]
name = "batya"
version = "0.1.0"
description = ""
authors = ["sashabrud <shuhbrud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"
black = "^23.12.1"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
